archive/kubernetes/ansible/dashboard/route.yaml
# DO NOT APPLY, DOES NOT WORK.
# To access dashboard, run
# kubectl -n kubernetes-dashboard port-forward svc/kubernetes-dashboard-kong-proxy 8443:443

apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: kubernetes-dashboard-http
  namespace: kubernetes-dashboard
spec:
  parentRefs:
  - name: traefik-gateway
    namespace: traefik
    sectionName: http
  hostnames:
  - kubernetes-dashboard.local
  rules:
    - filters:
      - type: RequestRedirect
        requestRedirect:
          scheme: https
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: kubernetes-dashboard-https
  namespace: kubernetes-dashboard
spec:
  parentRefs:
  - name: traefik-gateway
    namespace: traefik
    sectionName: https
  hostnames:
  - kubernetes-dashboard.local
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: kubernetes-dashboard-kong-proxy
      namespace: kubernetes-dashboard
      port: 443
